tests/fixtures/fail/forget_use_after_move.sc
let Resource = struct { value: i32 }

let main(): i32 = {
  let value = Resource { value: 42 }
  forget(value)
  value.value
}
